<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/css_navigation"
    app:startDestination="@id/orderListFragment">

    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.aap.cssdelivery.ui.OrderListFragment"
        android:label="@string/orders_snapshot"
        tools:layout="@layout/fragment_order_list" >
        <action
            android:id="@+id/action_orderDetailFragment_to_orderListFragment"
            app:destination="@id/orderDetailFragment"
            app:popUpTo="@id/orderListFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.aap.cssdelivery.ui.StatsFragment"
        android:label="@string/order_statistics"
        tools:layout="@layout/fragment_stats" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.aap.cssdelivery.ui.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.aap.cssdelivery.ui.OrderDetailFragment"
        android:label="@string/order_detail"
        tools:layout="@layout/fragment_order_detail" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.aap.cssdelivery.ui.SettingsFragment"
        android:label="@string/settings" />
</navigation>