<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.StatsFragment">


    <TextView
        android:id="@+id/delivered_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_delivered_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/delivered_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100" />

    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivered_label" />

    <TextView
        android:id="@+id/trashed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_trashed_label"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <TextView
        android:id="@+id/trashed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/trashed_label"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:text="50" />

    <View
        android:id="@+id/separator2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trashed_label" />

    <TextView
        android:id="@+id/sales_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delivered_amount_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <TextView
        android:id="@+id/sales_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        tools:text="$10000.00"
        app:layout_constraintStart_toEndOf="@+id/sales_label"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <TextView
        android:id="@+id/trashed_order_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#660000"
        tools:text="$2200.00"
        app:layout_constraintStart_toEndOf="@+id/trashed_loss_label"
        app:layout_constraintTop_toBottomOf="@+id/sales_label" />

    <TextView
        android:id="@+id/trashed_loss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trashed_loss_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sales_label" />

    <TextView
        android:id="@+id/total_revenue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_revenue_label"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trashed_loss_label" />

    <TextView
        android:id="@+id/total_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/total_revenue_label"
        app:layout_constraintStart_toEndOf="@+id/total_revenue_label"
        app:layout_constraintTop_toBottomOf="@+id/trashed_loss_label"
        tools:text="$7800.00" />
    <View
        android:id="@+id/separator3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_revenue_label" />
    <TextView
        android:id="@+id/average_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:text="Average delivery time:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator3"
        />
    <TextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:textStyle="bold"
        tools:text="20m"
        app:layout_constraintStart_toEndOf="@id/average_label"
        app:layout_constraintTop_toBottomOf="@+id/separator3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>